[gd_scene load_steps=10 format=3 uid="uid://m4vtkuxwx5o"]

[ext_resource type="Script" path="res://main.gd" id="1_ffvtq"]
[ext_resource type="Texture2D" uid="uid://ttwrnkhfka8k" path="res://atlas/bottom_background.tres" id="2_cxs0f"]
[ext_resource type="Texture2D" uid="uid://dwto0xia8seqh" path="res://images/backgrounds/background_01.png" id="3_4nfhf"]
[ext_resource type="Texture2D" uid="uid://dfj876t25rnh" path="res://atlas/compi_background.tres" id="3_vi3am"]
[ext_resource type="Texture2D" uid="uid://hu5ceomt3v01" path="res://images/ui/ui_atlas_01.png" id="4_rehcg"]
[ext_resource type="Texture2D" uid="uid://dejlx3m8hmvkg" path="res://atlas/triangle.tres" id="5_8pcgk"]
[ext_resource type="PackedScene" uid="uid://bsukwts2iuvua" path="res://compicactus.tscn" id="7_6lgj7"]
[ext_resource type="Texture2D" uid="uid://dyewnidttscvu" path="res://images/EibrielLogo.png" id="8_xc56p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4156l"]
atlas = ExtResource("4_rehcg")
region = Rect2(1531, 19, 124, 127)

[node name="main" type="Node"]
script = ExtResource("1_ffvtq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Background02" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4nfhf")

[node name="Control3" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="Node2D" parent="Control/Control3"]
unique_name_in_owner = true
position = Vector2(-1661, -846)

[node name="Cursor" type="Sprite2D" parent="Control/Control3/Grid"]
unique_name_in_owner = true
z_index = 1
texture = SubResource("AtlasTexture_4156l")

[node name="Control" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="UiAtlas02" type="Sprite2D" parent="Control/Control"]
position = Vector2(51, -119)
texture = ExtResource("2_cxs0f")

[node name="LexemeList" type="Node2D" parent="Control/Control"]
unique_name_in_owner = true
position = Vector2(-1656, -72)

[node name="Triangle" type="Sprite2D" parent="Control/Control"]
position = Vector2(-1653, -233)
rotation = -3.14159
texture = ExtResource("5_8pcgk")

[node name="Control2" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -300.0
offset_right = -11.0
offset_bottom = -260.0
grow_horizontal = 0
grow_vertical = 0

[node name="UiAtlas03" type="Sprite2D" parent="Control/Control2"]
position = Vector2(-858, -881)
texture = ExtResource("3_vi3am")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control/Control2"]
layout_mode = 0
offset_left = -1461.0
offset_top = -1082.0
offset_right = 459.0
offset_bottom = -2.0

[node name="SubViewport" type="SubViewport" parent="Control/Control2/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Compicactus" parent="Control/Control2/SubViewportContainer/SubViewport" instance=ExtResource("7_6lgj7")]
unique_name_in_owner = true

[node name="Screens" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroScreen" type="Control" parent="Screens"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Screens/IntroScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0156863, 0.0470588, 1)

[node name="Label" type="Label" parent="Screens/IntroScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press A to start"

[node name="PauseScreen" type="Control" parent="Screens"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Screens/PauseScreen"]
modulate = Color(1, 1, 1, 0.737255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0156863, 0.0470588, 1)

[node name="InventoryScreen" type="Control" parent="Screens"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Screens/InventoryScreen"]
modulate = Color(1, 1, 1, 0.737255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0156863, 0.0470588, 1)

[node name="LogoScreen" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="LogoScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0156863, 0.0470588, 1)

[node name="EibrielLogo" type="TextureRect" parent="LogoScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -825.5
offset_top = -265.5
offset_right = 825.5
offset_bottom = 265.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_xc56p")
